# sitoa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  bench_suite.py  make_submission.sh  run_testset.sh  sitoa.c  sitoa.cpp
include/: abpruning.h  ayu.h  codebook.h  debug.h  definitions.h  defs.h  graph.h  hash.h  headers.h  includes.h  io.h  moveinward.h  order  print.h  search.h  search_node.h  stats.h  transptable.h  transtable.h  util.h
test/: test  test.cpp
testsets/: all  comp02  comp02_all  comp02_fails  comp03  comp03_all  comp03_fails  comp04  comp04_all  comp04_fails  comp05  comp06
tools/: add_moves_to_go.py  calculate_score.cpp  convert_codebook.py  create_codebook.py  expand_move_opponent.cpp  fetch_competition_games.py  make_board.c  make_board.cpp  play_html_log.py  replay_log.cpp  test_articulation_points.c  test_articulation_points.cpp  test_clusters.c  test_clusters.cpp  test_hash.cpp  test_moves.c  test_moves.cpp  test_negamax.cpp  test_possible_moves.c  test_possible_moves.cpp  test_print.c  test_print.cpp  test_sol_distance.c  test_sol_distance.cpp  test_svm.cpp  test_trans_table.cpp  time_it.cpp  write_neighbour_arr.py
tools/data/: articulation_points  clusters  possible_moves  sample_log  trace1
